--- a/requirements.txt
+++ b/requirements.txt
@@ -24,4 +24,4 @@ typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.26.3
 Werkzeug==1.0.1
-cmake
+git+https://github.com/python/typed_ast.git#egg=typed_ast
